--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "test": "jest src/lib/__tests__/simple.test.ts",
+    "check-deployment": "node check-deployment.js",
     "db:setup": "node scripts/setup-database.js",
     "db:migrate": "node scripts/migrate-database.js migrate",
     "db:status": "node scripts/migrate-database.js status"
@@ -21,11 +25,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
