--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "@types/multer": "^2.0.0",
+    "cloudinary": "^2.7.0",
     "dotenv": "^17.2.1",
+    "lottie-react-native": "^7.3.4",
+    "multer": "^2.0.2",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
