--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "test": "jest src/lib/__tests__/simple.test.ts",
     "check-deployment": "node check-deployment.js",
@@ -37,7 +39,8 @@
     "eslint-config-next": "15.4.5",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
